--- a/Flask_app/templates/login.html
+++ b/Flask_app/templates/login.html
@@ -8,6 +8,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    
+    <div class="container d-flex justify-content-around">
+        <div class="form d-flex bg-dark col-4 p-3  mt-3">
+            <form action="/register">
+                <h1 class="text-primary">Registration</h1>
+                {% with messages = get_flashed_messages() %}
+                    {% if messages %}
+                        <div class="container bg-warning text-danger font-weight-bold">
+                            {% for message in messages %}
+                                <p>{{message}}</p>
+                            {% endfor %}
+                        </div>
+                    {% endif %}
+                {% endwith %}
+                <label for="first_name" class="text-white col-12 mt-2">First Name:</label>
+                <input type="text" class="col-12" name="first_name" value="{{info['first_name']}}">
+                <label for="last_name" class="text-white col-12 mt-2">Last Name:</label>
+                <input type="text" class="col-12" name="last_name" value="{{info['last_name']}}">
+                <label for="email" class="text-white col-12 mt-2">Email:</label>                    
+                <input type="email" class="col-12" name="email" value="{{info['email']}}">
+                <label for="password" class="text-white col-12 mt-2">Password:</label>
+                <input type="password" class="col-12" name="password">
+                <label for="conf_password" class="text-white col-12 mt-2">Confirm Password:</label>
+                <input type="password" class="col-12" name="conf_password">
+                <button type="submit" class="btn btn-primary mt-3">Register</button>
+            </form>
+        </div>
+
+        <div class="form d-flex bg-dark col-4 p-3  mt-3">
+            <form action="/register">
+                <h1 class="text-success">Login</h1>
+                <label for="email" class="text-white col-12 mt-2">Email:</label>                    
+                <input type="email" class="col-12" name="email">
+                <label for="password" class="text-white col-12 mt-2">Password:</label>
+                <input type="password" class="col-12" name="password">
+                <button type="submit" class="btn btn-success mt-3">Login</button>
+            </form>
+        </div>
+    </div>
 </body>
 </html>
