--- a/Flask_app/templates/login.html
+++ b/Flask_app/templates/login.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container d-flex justify-content-around">
         <div class="form d-flex bg-dark col-4 p-3  mt-3">
-            <form action="/register">
+            <form action="/register" method="post">
                 <h1 class="text-primary">Registration</h1>
                 {% with messages = get_flashed_messages() %}
                     {% if messages %}
@@ -36,7 +36,7 @@
         </div>
 
         <div class="form d-flex bg-dark col-4 p-3  mt-3">
-            <form action="/register">
+            <form action="/register" method = "post">
                 <h1 class="text-success">Login</h1>
                 <label for="email" class="text-white col-12 mt-2">Email:</label>                    
                 <input type="email" class="col-12" name="email">
