--- a/Flask_app/templates/home.html
+++ b/Flask_app/templates/home.html
@@ -8,9 +8,43 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
-    <form action="/logout" class="text-center">
-        <h1>{{id}}</h1>
-        <button type="submit" class="btn btn-primary m-3">Logout</button>
-    </form>
+    <div class="container m-3">
+        <div class="nav-bar d-flex justify-content-around">
+            <h1>Welcome {{user.first_name}}</h1>
+            <div class="d-flex justify-content-between">
+                <div class="d-flex">
+                    <form action="/add-recipe" class="text-center">
+                        <button type="submit" class="btn btn-primary m-3">Add Recipe</button>
+                    </form>
+                    <form action="/logout" class="text-center">
+                        <button type="submit" class="btn btn-primary m-3">Logout</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+            <h4 class="title">All potential recipes:</h4>
+            <table class="table table-striped text-center">
+                <thead class="thead-light">
+                    <th>Name</th>
+                    <th>Under</th>
+                    <th>Posted By:</th>
+                    <th>Actions</th>
+                </thead>
+                <tbody>
+                    {{for recipe in recipes:}}
+                        <tr>
+                            <td>{%recipe.name%}</td>
+                            <td>{%recipe.under%}</td>
+                            <td>{%recipe.creator%}</td>
+                            {{if recipe.user_id == user.id:}}
+                                <td><a href="/view/{{recipe.id}}" class="link">View</a> <a href="/edit/{{recipe.id}}" class="link">Edit</a> <a href="/delete/{{recipe.id}}" class="link">Delete</a></td>
+                            {{else:}}
+                                <td><a href="/view/{{recipe.id}}" class="link">View</a></td>
+                            {{endif}}
+                            </tr>
+                    {{endfor}}
+                </tbody>
+            </table>
+    </div>
 </body>
 </html>
