--- a/Flask_app/templates/login.html
+++ b/Flask_app/templates/login.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 </head>
 <body>
+    <h1 class="text-center mt-3 text-success">Recipe Share</h1>
     <div class="container d-flex justify-content-around">
         <div class="form d-flex bg-dark col-4 p-3  mt-3">
             <form action="/add-user" method="post">
