--- a/Flask_app/templates/view_recipe.html
+++ b/Flask_app/templates/view_recipe.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container mx-auto mt-3">
         <div class="nav-bar d-flex justify-content-around mb-3">
-            <h1>Add a New Recipe!</h1>
+            <h1>Welcome {{user.first_name}}!</h1>
             <div class="d-flex justify-content-between">
                 <div class="d-flex">
                     <form action="/home" class="text-center">
@@ -32,19 +32,19 @@
         <div class="container border rounded shadow p-3">
             <div class="d-flex">
                 <p class="col-4">Description:</p>
-                <p class="col-8">{% recipe.description %}</p>
+                <p class="col-8">{{recipe.description}}</p>
             </div>
             <div class="d-flex">
                 <p class="col-4">Under 30 minutes:</p>
-                <p class="col-8">{% recipe.under %}</p>
+                <p class="col-8">{{recipe.under}}</p>
             </div>
             <div class="d-flex">
                 <p class="col-4">Instructions:</p>
-                <p class="col-8">{% recipe.instructions %}</p>
+                <p class="col-8">{{recipe.instructions}}</p>
             </div>
             <div class="d-flex">
                 <p class="col-4">Date Made:</p>
-                <p class="col-8">{% recipe.date %}</p>
+                <p class="col-8">{{recipe.date}}</p>
             </div>
         </div>
     </div>
