--- a/Flask_app/templates/edit_recipe.html
+++ b/Flask_app/templates/edit_recipe.html
@@ -38,11 +38,11 @@
                     </div>
                     <div>
                         <label for="descrption" class="label col-3">Description:</label>
-                        <input type="text" name="description" class="col-8" value="{{recipe.description}}">>
+                        <input type="text" name="description" class="col-8" value="{{recipe.description}}">
                     </div>
                     <div>
                         <label for="instructions" class="label col-3">Instructions:</label>
-                        <input type="text" name="instructions" class="col-8" value="{{recipe.instructions}}">>
+                        <input type="text" name="instructions" class="col-8" value="{{recipe.instructions}}">
                     </div>
                 </div>
                 <div class="col-6 text-center d-inline">
