--- a/Flask_app/templates/view_recipe.html
+++ b/Flask_app/templates/view_recipe.html
@@ -44,7 +44,7 @@
             </div>
             <div class="d-flex">
                 <p class="col-4">Date Made:</p>
-                <p class="col-8">{{recipe.date}}</p>
+                <p class="col-8">{{recipe.made_at.strftime('%Y-%m-%d')}}</p>
             </div>
         </div>
     </div>
